frontend/test/should_fail/set_005.grg
using set_model_001;

rule constAssignment {
	a:A;
	
	modify {
		eval {
			a.constStringSet = a.constStringSet.remove("bla");
		}
	}
}